config overhaul